Revision history for {{$dist->name}}

{{$NEXT}}

0.57_01   2018-11-04 15:36:33 -0500
  - Major refactor of the internals of the type system.  The API is
    the same but some type meta-data (which was never guaranteed
    to stay the same) may have changed.

    * The internal representation of types is much smaller (4 bytes
      for simple types), which can save a lot of memory if you have
      lots of types.

    * Fixed width strings example: `string(32)` are now internally
      treated the same as a record with no class `record(32)`.
      Previously these were separate types but worked identically,
      this removes duplicate code.

    * Fixed width string arguments to a closure are now read-only,
      Usually you should be copying these arguments anyway.

    * Removed the internal type "exotic float" which includes
      `long double`, `complex float` and `complex double`.  These are
      now grouped internally with other scalar types.

  - Merge FFI::Platypus::Type::StringArray into this distribution

0.56      2018-09-03 09:17:42 -0400
  - lib method accepts code reference which will be called immediately
    and results added to lib list

0.55      2018-08-29 10:37:36 -0400
  - Production release identical to 0.54_03

0.54_03   2018-08-28 10:46:04 -0400
  - Additional test diagnostics.

0.54_02   2018-08-28 05:30:04 -0400
  - record as closure argument is now read-only.  This makes
    sense since such records are actually copies.  For when
    you need a non-copy use an opaque type instead.  This allows
    records with rw strings (although they will be ro in the
    closure).

0.54_01   2018-08-16 03:27:31 -0400
  - Experimental: allow record as closure argument
    Records with string_rw are not supported, and
    will likely crash your script if you try to use
    them.  Support for such records is probably not in
    the cards, but a future version may disallow them
    to avoid crashes.